# NetPreProcess_HVX

./: .gitignore  CMakeLists.txt  README.md
inc/: base.h  base_engine.h  pre_process.idl
otherlibs/common/inc/: hexagon_cache.h  hvx.cfg.h  tcomdef.h  terror.h  tvloffscreen.h
otherlibs/dsp/inc/: hvx.cfg.h  hwio.h  io.h  subsys.h
otherlibs/dsp/src/: subsys.cpp
otherlibs/opencv/inc/opencv2/: cvconfig.h  opencv_modules.hpp
otherlibs/opencv/inc/opencv2/core/hal/: interface.h
otherlibs/qmath/inc/: qmath.h  qmath.inl
otherlibs/rpcmem/inc/: rpcmem.h
release/: 0.nv21  DSPDemo
script/: build_android.sh  build_dsp.sh  build_linux.sh  build_sim.sh  test.sh
src/: base.cpp  base_engine.c  base_engine.cpp  opencl_wrapper.cc  opencl_wrapper.h  pre_process.h  pre_process_impl.c  pre_process_skel.c  pre_process_stub.c  q6cache.h
src/cl/: vec_add.cl
testbed/src/: loadimg.c  loadimg.h  net_pre_process.c  net_pre_process.cpp  net_pre_process.h  rgba2bgr.cpp  rgba2bgr.h  testbed.c  testbed.cpp
toolchains/: hexagon.toolchain.cmake
